# gravity-room

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.production  Dockerfile.api  MIGRATION_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  lefthook.yml  log.md  next.config.ts  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  roadmap.md  todo.md  vercel.json
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-api-endpoint.md  add-database-table-or-schema-migration.md  database-migration.md
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: _go-integration.yml  (+18 more)
.lavish/: exercise-wiki-summary.html
api/: [...path].ts  index.ts
apps/backend/analytics/: Dockerfile  config.py  db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
apps/backend/analytics/insights/: frequency.py  volume.py
apps/backend/analytics/ml/: forecast.py  plateau.py
apps/backend/analytics/tests/: test_forecast.py  test_main.py  test_plateau.py  test_recommendation.py
docs/: ARCHITECTURE.md  VERCEL_CUTOVER.md  api-and-db.md  deployment-railway.md  issues.md  llm-map.md  tech-stack.md
openspec/: config.yaml
presentation/: .gitignore  README.md  build.mjs  index.html  notas-defensa.md  package.json  slides.md
scripts/: bundle-api-function.mjs  check-security-headers.ts  committer  deploy-log.sh  harness  harness-go  loadtest.js  refresh-claude-context.ts  rollback.sh  vercel-build.sh
(+1387 files in other folders)
