[project]
name = "gravity-room-analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "psycopg[binary,pool]==3.2.4",
    "numpy==2.2.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "APScheduler==3.11.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
]

[tool.mypy]
strict = false
ignore_missing_imports = true
